[tool.poetry]
name = "moonphases"
version = "0.1.0"
description = ""
authors = ["montyz <monty@codetransform.com>"]

[tool.poetry.dependencies]
python = "^3.8"
skyfield = "^1.39"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
